<resources>
// rohmat dan mufid
    <string name="app_name">ComeToGarut</string>
    <string name="label_search">Cari Tempat Wisata</string>
    <string name="masukan">Masukan</string>

    <string name="name">Place</string>
    <string name="address">Address</string>
    <string name="price">Tickets Price</string>
    <string name="time_begin">Open</string>
    <string name="day_begin">Monday</string>
    <string name="time_end">Closed</string>
    <string name="day_end">Monday</string>
    <string name="description">Description</string>
    <string name="contact">Contact</string>

    <string name="open_time">Open Time</string>
    <string name="open_day">Open Day</string>

    <string name="email">Email</string>
    <string name="send">Send</string>

    <string name="purity">Kebersihan</string>
    <string name="policy">Ketertiban</string>
    <string name="security">Keamanan</string>
    <string name="facility">Fasilitas</string>

    <string name="sh_galleries">Galleries</string>
    <string name="sh_ratings">Ratings</string>
    <string name="sh_suggestions">Suggestions</string>
    <string name="send_suggestions">Send Suggestions</string>
    <string name="sh_review">Review</string>
    <string name="send_review">Send Review</string>

    <string name="title_detail">Deskripsi</string>

    <string name="title_activity_detail">Detail Place</string>

    <string name="title_form">Title Form</string>
    <string name="nama">Nama</string>
    <string name="send_rev">Send</string>
</resources>
