<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/photo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:srcCompat="@android:drawable/btn_star_big_on"
        android:contentDescription="@string/description" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textAppearance="?android:textAppearanceLarge"
        android:layout_gravity="center"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight=".25"
            android:layout_height="wrap_content"
            android:text="@string/purity"
            android:textAppearance="?android:textAppearanceMedium"/>

        <RatingBar
            android:id="@+id/rating_cleanliness"
            android:layout_width="0dp"
            android:layout_weight=".75"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:numStars="5" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight=".25"
            android:layout_height="wrap_content"
            android:text="@string/security"
            android:textAppearance="?android:textAppearanceMedium"/>

        <RatingBar
            android:id="@+id/rating_security"
            android:layout_width="0dp"
            android:layout_weight=".75"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:numStars="5" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight=".25"
            android:layout_height="wrap_content"
            android:text="@string/policy"
            android:textAppearance="?android:textAppearanceMedium"/>

        <RatingBar
            android:id="@+id/rating_orderly"
            android:layout_width="0dp"
            android:layout_weight=".75"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:numStars="5" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight=".25"
            android:layout_height="wrap_content"
            android:text="@string/facility"
            android:textAppearance="?android:textAppearanceMedium"/>

        <RatingBar
            android:id="@+id/rating_facility"
            android:layout_width="0dp"
            android:layout_weight=".75"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:numStars="5" />

    </LinearLayout>

    <Button
        android:id="@+id/but"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/send"/>

</LinearLayout>