<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MasukkanActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_form"
        android:textAppearance="?android:textAppearanceLarge"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".30"
            android:text="@string/nama"
            android:textAppearance="?android:textAppearanceMedium" />

        <EditText
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_weight=".70"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/nama"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight=".30"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textAppearance="?android:textAppearanceMedium" />

        <EditText
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_weight=".70"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email"/>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_rev"
        android:layout_gravity="center"
        android:textAlignment="center" />

</LinearLayout>
