<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".mvp.view.DetailPlaceActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:srcCompat="@android:drawable/btn_dialog"
            android:scaleType="centerCrop"
            android:contentDescription="@string/name"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/nameView"
            android:textAlignment="center"
            android:text="@string/name"
            android:textAppearance="?android:textAppearanceLarge"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight=".30"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:padding="2dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

            <TextView
                android:id="@+id/addressView"
                android:layout_width="0dp"
                android:layout_weight=".70"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:padding="2dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight=".30"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:padding="2dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

            <TextView
                android:id="@+id/priceView"
                android:layout_width="0dp"
                android:layout_weight=".70"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:padding="2dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight=".30"
                android:layout_height="wrap_content"
                android:text="@string/time_begin"
                android:padding="2dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

            <TextView
                android:id="@+id/time_beginView"
                android:layout_width="0dp"
                android:layout_weight=".70"
                android:layout_height="wrap_content"
                android:text="@string/time_begin"
                android:padding="2dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight=".30"
                android:layout_height="wrap_content"
                android:text="@string/time_end"
                android:padding="2dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

            <TextView
                android:id="@+id/time_endView"
                android:layout_width="0dp"
                android:layout_weight=".70"
                android:layout_height="wrap_content"
                android:text="@string/time_end"
                android:padding="2dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight=".30"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:padding="2dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

            <TextView
                android:id="@+id/descriptionView"
                android:layout_width="0dp"
                android:layout_weight=".70"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:padding="2dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight=".30"
                android:layout_height="wrap_content"
                android:text="@string/contact"
                android:padding="2dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

            <TextView
                android:id="@+id/contactView"
                android:layout_width="0dp"
                android:layout_weight=".70"
                android:layout_height="wrap_content"
                android:text="@string/contact"
                android:padding="2dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_galleries"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sh_galleries"
                android:layout_gravity="center"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/btn_ratings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sh_ratings"
                android:layout_gravity="center"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/btn_suggestions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sh_suggestions"
                android:layout_gravity="center"
                style="?android:attr/buttonBarButtonStyle"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>