<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mvp.view.SuggestionFragment">

 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/app_name"
         android:textAppearance="?android:textAppearanceLarge"
         android:textAlignment="center"/>

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">

         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight=".30"
             android:text="@string/masukan"
             android:textAppearance="?android:textAppearanceMedium" />

         <TextView
             android:id="@+id/name"
             android:layout_width="0dp"
             android:layout_weight=".70"
             android:layout_height="wrap_content"
             android:inputType="text"
             />

     </LinearLayout>

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">

         <TextView
             android:layout_width="0dp"
             android:layout_weight=".30"
             android:layout_height="wrap_content"
             android:text="@string/email"
             android:textAppearance="?android:textAppearanceMedium" />

         <TextView
             android:id="@+id/email"
             android:layout_width="0dp"
             android:layout_weight=".70"
             android:layout_height="wrap_content"
             android:inputType="textEmailAddress"
            />

     </LinearLayout>

 </LinearLayout>

</FrameLayout>