<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp"
    card_view:cardCornerRadius="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".30"
                android:text="@string/nama"
                android:textAppearance="?android:textAppearanceMedium" />

            <TextView
                android:id="@+id/user_name"
                android:layout_width="0dp"
                android:layout_weight=".70"
                android:layout_height="wrap_content"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight=".30"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textAppearance="?android:textAppearanceMedium" />

            <TextView
                android:id="@+id/user_email"
                android:layout_width="0dp"
                android:layout_weight=".70"
                android:layout_height="wrap_content"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight=".25"
                android:layout_height="wrap_content"
                android:text="@string/purity"
                android:textAppearance="?android:textAppearanceMedium"/>

            <RatingBar
                android:id="@+id/rating_cleanliness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:numStars="5"
                android:rating="3"
                android:stepSize="1"
                android:isIndicator="true"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight=".25"
                android:layout_height="wrap_content"
                android:text="@string/security"
                android:textAppearance="?android:textAppearanceMedium"/>

            <RatingBar
                android:id="@+id/rating_security"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:numStars="5"
                android:rating="3"
                android:stepSize="1"
                android:isIndicator="true"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight=".25"
                android:layout_height="wrap_content"
                android:text="@string/policy"
                android:textAppearance="?android:textAppearanceMedium"/>

            <RatingBar
                android:id="@+id/rating_orderly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:numStars="5"
                android:rating="3"
                android:stepSize="1"
                android:isIndicator="true"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight=".25"
                android:layout_height="wrap_content"
                android:text="@string/facility"
                android:textAppearance="?android:textAppearanceMedium"/>

            <RatingBar
                android:id="@+id/rating_facility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:numStars="5"
                android:rating="3"
                android:stepSize="1"
                android:isIndicator="true"/>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>